[gd_scene load_steps=2 format=2]

[ext_resource path="res://Popup.gd" type="Script" id=1]

[node name="Popup" type="PanelContainer"]
margin_right = 500.0
margin_bottom = 300.0
rect_min_size = Vector2( 500, 300 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 493.0
margin_bottom = 293.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_right = 486.0
margin_bottom = 39.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 479.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Header" type="Label" parent="VBoxContainer/PanelContainer/HBoxContainer2"]
margin_right = 401.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 6.0
text = "popup header"
align = 1
valign = 1

[node name="CancelButton" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer2"]
margin_left = 405.0
margin_right = 472.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "X"

[node name="Body" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 43.0
margin_right = 486.0
margin_bottom = 199.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
text = "popup body"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 203.0
margin_right = 486.0
margin_bottom = 242.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Select1" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 241.0
margin_bottom = 39.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "button1"

[node name="Select2" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 245.0
margin_right = 486.0
margin_bottom = 39.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "button2"

[node name="Select3" type="Button" parent="VBoxContainer"]
margin_top = 246.0
margin_right = 486.0
margin_bottom = 286.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "button3"
[connection signal="mouse_entered" from="VBoxContainer/PanelContainer" to="." method="_on_PanelContainer_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/PanelContainer" to="." method="_on_PanelContainer_mouse_exited"]
[connection signal="mouse_entered" from="VBoxContainer/PanelContainer/HBoxContainer2/Header" to="." method="_on_Header_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/PanelContainer/HBoxContainer2/Header" to="." method="_on_Header_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer2/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Select1" to="." method="_on_Select1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Select2" to="." method="_on_Select2_pressed"]
[connection signal="pressed" from="VBoxContainer/Select3" to="." method="_on_Select3_pressed"]
